Ex.5: Add an image to each second cell of every row

--- a/index.html
+++ b/index.html
@@ -26,28 +26,32 @@
     <table>
         <tr>
             <td>row1\column 1</td>
-            <td>column 2</td>
+            <!-- Ex.5: Add an image to each second cell of every row -->
+            <td><img src="https://www.world-of-lucid-dreaming.com/image-files/daydreams.jpg" alt="A person looking up and dayderaming."></td>
             <td>column 3</td>
             <td>column 4</td>
             <td>column 5</td>
         </tr>
         <tr>
             <td>row 2</td>
-            <td></td>
+            <!-- Ex.5: Add an image to each second cell of every row -->
+            <td><img src="https://www.world-of-lucid-dreaming.com/image-files/dreams-and-types-of-dreams.jpg" alt="A person sleeping"></td>
             <td></td>
             <td></td>
             <td></td>
         </tr>
         <tr>
             <td>row 3</td>
-            <td></td>
+            <!-- Ex.5: Add an image to each second cell of every row -->
+            <td><img src="https://www.world-of-lucid-dreaming.com/image-files/dreams-types-of-dreams.jpg" alt="A little cartoon girl in the clouds" /></td>
             <td></td>
             <td></td>
             <td></td>
         </tr>
         <tr>
             <td>row 4</td>
-            <td></td>
+            <!-- Ex.5: Add an image to each second cell of every row -->
+            <td><img src="https://www.world-of-lucid-dreaming.com/image-files/false-awakening-dreams.jpg" alt="A mannequin sitting on the bed with missing legs and one arm"></td>
             <td></td>
             <td></td>
             <td></td>
@@ -57,7 +61,6 @@
     <!-- 
         HTML EXERCISES
         
-    Ex.5: Add an image to each second cell of every row
     Ex.6: Add a anchor link for every image
     Ex.7: Merge together 2 table cells
     Ex.8: Divide the page using a horizontal line
