Ex.6: Add a anchor link for every image

--- a/index.html
+++ b/index.html
@@ -26,32 +26,36 @@
     <table>
         <tr>
             <td>row1\column 1</td>
-            <!-- Ex.5: Add an image to each second cell of every row -->
-            <td><img src="https://www.world-of-lucid-dreaming.com/image-files/daydreams.jpg" alt="A person looking up and dayderaming."></td>
-            <td>column 3</td>
+            <!--Ex.6: Add a anchor link for every image 
+                Ex.5: Add an image to each second cell of every row -->
+            <td><a href="https://www.world-of-lucid-dreaming.com/image-files/daydreams.jpg"><img src="https://www.world-of-lucid-dreaming.com/image-files/daydreams.jpg" alt="A person looking up and dayderaming."></a></td>
+            <td></td>
             <td>column 4</td>
             <td>column 5</td>
         </tr>
         <tr>
             <td>row 2</td>
-            <!-- Ex.5: Add an image to each second cell of every row -->
-            <td><img src="https://www.world-of-lucid-dreaming.com/image-files/dreams-and-types-of-dreams.jpg" alt="A person sleeping"></td>
+            <!--Ex.6: Add a anchor link for every image 
+                Ex.5: Add an image to each second cell of every row -->
+            <td><a href="https://www.world-of-lucid-dreaming.com/image-files/dreams-and-types-of-dreams.jpg"><img src="https://www.world-of-lucid-dreaming.com/image-files/dreams-and-types-of-dreams.jpg" alt="A person sleeping"></a></td>
             <td></td>
             <td></td>
             <td></td>
         </tr>
         <tr>
             <td>row 3</td>
-            <!-- Ex.5: Add an image to each second cell of every row -->
-            <td><img src="https://www.world-of-lucid-dreaming.com/image-files/dreams-types-of-dreams.jpg" alt="A little cartoon girl in the clouds" /></td>
+            <!--Ex.6: Add a anchor link for every image 
+                Ex.5: Add an image to each second cell of every row -->
+            <td><a href="https://www.world-of-lucid-dreaming.com/image-files/dreams-types-of-dreams.jpg"><img src="https://www.world-of-lucid-dreaming.com/image-files/dreams-types-of-dreams.jpg" alt="A little cartoon girl in the clouds" /></a></td>
             <td></td>
             <td></td>
             <td></td>
         </tr>
         <tr>
             <td>row 4</td>
-            <!-- Ex.5: Add an image to each second cell of every row -->
-            <td><img src="https://www.world-of-lucid-dreaming.com/image-files/false-awakening-dreams.jpg" alt="A mannequin sitting on the bed with missing legs and one arm"></td>
+            <!--Ex.6: Add a anchor link for every image 
+                Ex.5: Add an image to each second cell of every row -->
+            <td><a href="https://www.world-of-lucid-dreaming.com/image-files/false-awakening-dreams.jpg"><img src="https://www.world-of-lucid-dreaming.com/image-files/false-awakening-dreams.jpg" alt="A mannequin sitting on the bed with missing legs and one arm"></a></td>
             <td></td>
             <td></td>
             <td></td>
@@ -61,7 +65,6 @@
     <!-- 
         HTML EXERCISES
         
-    Ex.6: Add a anchor link for every image
     Ex.7: Merge together 2 table cells
     Ex.8: Divide the page using a horizontal line
     Ex.9: Create a container with a nested paragraph and a nested unordered list
