--- a/index.html
+++ b/index.html
@@ -82,11 +82,12 @@
             <td></td>
         </tr>
     </table>
+    <!-- Ex.8: Divide the page using a horizontal line -->
+    <hr>
 
     <!-- 
         HTML EXERCISES
         
-    Ex.8: Divide the page using a horizontal line
     Ex.9: Create a container with a nested paragraph and a nested unordered list
     Ex.10: Create a footer with some information about the page creator 
  -->
