Ex.9: Create a container with a nested paragraph and a nested unordered list

--- a/index.html
+++ b/index.html
@@ -84,11 +84,34 @@
     </table>
     <!-- Ex.8: Divide the page using a horizontal line -->
     <hr>
-
+    <!-- Ex.9: Create a container with a nested paragraph and a nested unordered list -->
+    <section>
+        <p>
+            Sometimes I control lots of aspects of the dream - like the locations or characters or plot. But my dreaming mind still fills in a lot of details on its own.
+        </p>
+        <p>
+            Other times I let the dream guide me and show me whatever it wants. I'm still lucid because I can think clearly, acknowledge I'm dreaming and experience the dream in real-life intensity.
+        </p>
+        <p>
+            Most people use lucid dreams to fulfill personal desires. But once you look outside this feature, you'll realize lucid dreams offer brilliant insights into the unconscious mind.
+        </p>
+    </section>
+    <section>
+        <ul>
+            <li>apple</li>
+            <li>grape</li>
+            <li>bread</li>
+            <li>spices:
+                <ul>
+                    <li>basil</li>
+                    <li>parsness</li>
+                </ul>
+            </li>
+        </ul>
+    </section>
     <!-- 
         HTML EXERCISES
         
-    Ex.9: Create a container with a nested paragraph and a nested unordered list
     Ex.10: Create a footer with some information about the page creator 
  -->
 </body>
