Ex.10: Create a footer with some information about the page creator

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <title>M1-H1 Exam 50</title>
 </head>
 <body>
-    <!-- Ex.2: Create a heading -->
-    <h1>Dream Catcher</h1>
+    <header>
+        <!-- Ex.2: Create a heading -->
+        <h1>Dream Catcher</h1>
+    </header>
     
     <h2>The Five Types of Dreams</h2>
 
@@ -109,11 +111,18 @@
             </li>
         </ul>
     </section>
-    <!-- 
-        HTML EXERCISES
-        
-    Ex.10: Create a footer with some information about the page creator 
- -->
+    <!-- Ex.10: Create a footer with some information about the page creator -->
+    <footer>
+        <section class="address">
+            <h3>About:</h3>
+            <p>Name: Michel </p>
+            <p>Sureame: Nostradamus</p>
+            <p>Age: 518</p>
+            <p>Job: Hope surfera</p>
+            <h4>Address: </h4>
+            <p>Street: Down Hell</p>
+            <p>Nr: 666</p>
+        </section>
+    </footer>  
 </body>
 </html>
-
