--- a/index.html
+++ b/index.html
@@ -29,14 +29,16 @@
     <table>
         <tr>
             <td>row1\column 1</td>
-            <!--Ex.6: Add a anchor link for every image 
-                Ex.5: Add an image to each second cell of every row -->
+            <!-- Ex.5: Add an image to each second cell of every row -->
+            <td>
+                <img src="https://www.world-of-lucid-dreaming.com/image-files/daydreams.jpg" alt="A person looking up and dayderaming.">
+            </td>
+            <!-- Ex.6: Add a anchor link for every image  -->
             <td>
                 <a href="https://www.world-of-lucid-dreaming.com/image-files/daydreams.jpg">
-                    <img src="https://www.world-of-lucid-dreaming.com/image-files/daydreams.jpg" alt="A person looking up and dayderaming.">
+                    Daydreams
                 </a>
             </td>
-            <td>column3</td>
             <style>
             table, td {
                 border: 1px solid black;
@@ -47,40 +49,46 @@
         </tr>
         <tr>
             <td>row 2</td>
-            <!--Ex.6: Add a anchor link for every image 
-                Ex.5: Add an image to each second cell of every row -->
+            <!-- Ex.5: Add an image to each second cell of every row -->
+            <td>
+                <img src="https://www.world-of-lucid-dreaming.com/image-files/dreams-and-types-of-dreams.jpg" alt="A person sleeping">
+            </td>
+            <!-- Ex.6: Add a anchor link for every image  -->
             <td>
                 <a href="https://www.world-of-lucid-dreaming.com/image-files/dreams-and-types-of-dreams.jpg">
-                    <img src="https://www.world-of-lucid-dreaming.com/image-files/dreams-and-types-of-dreams.jpg" alt="A person sleeping">
+                    Normal Dreams
                 </a>
             </td>
-            <td></td>
             <td></td>
             <td></td>
         </tr>
         <tr>
             <td>row 3</td>
-            <!--Ex.6: Add a anchor link for every image 
-                Ex.5: Add an image to each second cell of every row -->
+            <!-- Ex.5: Add an image to each second cell of every row -->
+            <td>
+                <img src="https://www.world-of-lucid-dreaming.com/image-files/dreams-types-of-dreams.jpg" alt="A little cartoon girl in the clouds" />
+            </td>
+            <!-- Ex.6: Add a anchor link for every image  -->
             <td>
                 <a href="https://www.world-of-lucid-dreaming.com/image-files/dreams-types-of-dreams.jpg">
-                    <img src="https://www.world-of-lucid-dreaming.com/image-files/dreams-types-of-dreams.jpg" alt="A little cartoon girl in the clouds" />
+                    Lucid Dreams
                 </a>
             </td>
-            <td></td>
             <td></td>
             <td></td>
         </tr>
         <tr>
             <td>row 4</td>
-            <!--Ex.6: Add a anchor link for every image 
-                Ex.5: Add an image to each second cell of every row -->
+            <!-- Ex.5: Add an image to each second cell of every row -->
+            <td>
+                <img src="https://www.world-of-lucid-dreaming.com/image-files/false-awakening-dreams.jpg" alt="A mannequin sitting on the bed with missing legs and one arm">
+            </td>
+            <!-- Ex.6: Add a anchor link for every image  -->
             <td>
                 <a href="https://www.world-of-lucid-dreaming.com/image-files/false-awakening-dreams.jpg">
-                    <img src="https://www.world-of-lucid-dreaming.com/image-files/false-awakening-dreams.jpg" alt="A mannequin sitting on the bed with missing legs and one arm">
+                    False Awakenings
                 </a>
             </td>
-            <td></td>
             <td></td>
             <td></td>
         </tr>
