Ex.14: Create a class with a border

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </td>
             <!-- Ex.6: Add a anchor link for every image  -->
             <td>
-                <a href="https://www.world-of-lucid-dreaming.com/image-files/daydreams.jpg">
+                <a class="links" href="https://www.world-of-lucid-dreaming.com/image-files/daydreams.jpg">
                     Daydreams
                 </a>
             </td>
@@ -55,7 +55,7 @@
             </td>
             <!-- Ex.6: Add a anchor link for every image  -->
             <td>
-                <a href="https://www.world-of-lucid-dreaming.com/image-files/dreams-and-types-of-dreams.jpg">
+                <a class="links" href="https://www.world-of-lucid-dreaming.com/image-files/dreams-and-types-of-dreams.jpg">
                     Normal Dreams
                 </a>
             </td>
@@ -70,7 +70,7 @@
             </td>
             <!-- Ex.6: Add a anchor link for every image  -->
             <td>
-                <a href="https://www.world-of-lucid-dreaming.com/image-files/dreams-types-of-dreams.jpg">
+                <a class="links" href="https://www.world-of-lucid-dreaming.com/image-files/dreams-types-of-dreams.jpg">
                     Lucid Dreams
                 </a>
             </td>
@@ -85,7 +85,7 @@
             </td>
             <!-- Ex.6: Add a anchor link for every image  -->
             <td>
-                <a href="https://www.world-of-lucid-dreaming.com/image-files/false-awakening-dreams.jpg">
+                <a class="links" href="https://www.world-of-lucid-dreaming.com/image-files/false-awakening-dreams.jpg">
                     False Awakenings
                 </a>
             </td>
