Ex.42: Add a button to hide every image on the page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         <li>False Awakenings</li>
         <li>Nightmares</li>
     </ol>
-    
+     <!-- Ex.42: Add a button to hide every image on the page -->
+    <button> Hide Images </button>
     <!-- Ex.4: Create a table with 5 columns and 4 rows -->
     <table>
         <tr>
