Ex.43: Add a button to hide and show the table from the page

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
         <li>Nightmares</li>
     </ol>
      <!-- Ex.42: Add a button to hide every image on the page -->
-    <button> Hide Images </button>
+    <button class="btn-hideAllImages"> Hide Images </button>
+     <!-- Ex.43: Add a button to hide and show the table from the page -->
+    <button class="btn-hideTable"> Hide Table </button>
     <!-- Ex.4: Create a table with 5 columns and 4 rows -->
     <table>
         <tr>
